src/scss/abstracts/_mixins.scss
// Mixins.
@mixin uio-focus-style($foregroundColor, $backgroundColor) {
	a:focus,
	a:hover,
	#defaultContainer header .site-nav-wrapper .site-nav nav a:focus,
	#defaultContainer header .site-nav-wrapper .site-nav nav a:hover,
	#defaultContainer .content-wrapper .tags-info .tags a:focus,
	#defaultContainer .content-wrapper .tags-info .tags a:hover,
	#search-form input,
	.card:focus,
	.card:hover {
		box-shadow: inset 0 0 0 rem(2) $foregroundColor;
	}

	li .pagination-link,
	li .pagination-link::before {
		box-shadow: 0 0 0 rem(2) $foregroundColor inset;
	}

	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"] {
		background-color: $foregroundColor !important; // Enactors.css in infusion uses !important on this element
		box-shadow: none;
		color: $backgroundColor !important; // Enactors.css in infusion uses !important on this element
	}

	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"]:hover,
	#defaultContainer .content-wrapper main .pagination .pagination-list li a[aria-current="page"]:focus {
		box-shadow:
			0 0 0 rem(4) $backgroundColor,
			0 0 0 rem(6) $foregroundColor;
	}
}

@mixin adapt-to-highContrast($fColor, $bColor) {
	// Social media icons
	footer .footer-content .social-media .social-media-icons a {
		svg path {
			fill: currentColor;
			stroke: $bColor;
		}

		&:hover,
		&:focus {
			svg path {
				fill: $bColor;
				stroke: currentColor;
			}
		}
	}

	// Hide ellipsis when a post excerpt is fully displayed
	.news-grid .api-content .news-item .preview-content::after {
		background: $bColor;
	}
}

